# ocean-acoustic-explorer

./: .gitignore  CLAUDE.md  docker-compose.yml  开发方案.md  设计方案.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: acoustic.py  profiles.py  scenarios.py  tiles.py  trends.py
backend/app/services/: acoustic_models.py  bathymetry.py  features.py  section.py  sediment.py  sound_speed.py  zarr_reader.py
backend/app/tasks/: __init__.py
data-pipeline/: inspect_gebco.py  inspect_woa23.py  test_sound_speed.py
data-pipeline/compute/: precompute_features.py
data-pipeline/download/: download_all.sh  download_deck41.sh  download_gebco.sh  download_hycom.sh  download_hycom_ocean.py  download_hycom_opendap.py  download_soda.sh  download_woa23.sh  relay_hycom.py  relay_woa23.sh
data-pipeline/preprocess/: convert_to_zarr.py
frontend/: Dockerfile  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/charts/: ProfileChart.tsx  TLChart.tsx  TrendChart.tsx
frontend/src/components/common/: ColorBar.css  ColorBar.tsx  FeatureTooltip.css  FeatureTooltip.tsx
frontend/src/components/controls/: LayerControls.css  LayerControls.tsx  MonthSlider.css  MonthSlider.tsx
frontend/src/components/globe/: CesiumGlobe.css  CesiumGlobe.tsx
frontend/src/services/: api.ts
frontend/src/stores/: layerStore.ts
frontend/src/types/: plotly.d.ts
nginx/: nginx.conf
wms-server/: Dockerfile  requirements.txt
wms-server/app/: main.py
(+12 files in other folders)
